<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="发货方读写卡系统"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textEPC"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@id/home_title"
        android:hint="@string/Lable_EPC"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <LinearLayout
        android:id="@+id/home_plate_number_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textEPC"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="车牌号:"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/home_plate_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_tare_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_plate_number_layout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="发货皮重:"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/home_tare"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:cursorVisible="true"
            android:hint="请输入皮重"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_gross_weight_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_tare_layout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="发货毛重:"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/home_gross_weight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:cursorVisible="true"
            android:hint="请输入毛重"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_net_weight_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_gross_weight_layout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="发货净重:"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/home_net_weight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inputdata_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_net_weight_layout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/Lable_data_write"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/inputdata"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:hint="@string/Lable_data"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputdata_layout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lable_result"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/home_resultView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/home_card_reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="读卡"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <Button
            android:id="@+id/home_write_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="写卡"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>

</RelativeLayout>
